# RDKitConverter-benchmark

./: .gitignore  Makefile  README.md  environment.yaml  setup.cfg
results/: badge.json  failed_molecules.html  failed_molecules.smi  failed_scaffolds.html  failed_scaffolds.smi  results.json  scaffold_network.html  scaffold_networkx.pkl.xz
scripts/: benchmark.py  benchmark_remaining.py  drop_duplicates.sh  fetch_chembl.sh  fetch_molecules.py  prepare_molecules.py  process_molecules.py  report.py  scaffold_analysis.py  split_in_chunks.sh  utils.py
