[metadata]
name = rdkitconverter_benchmark
description = Benchmark for MDAnalysis RDKitConverter module
author = Cédric Bouysset
author_email = bouysset.cedric@gmail.com
license = Apache License, Version 2.0
license_file = LICENSE
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/MDAnalysis/RDKitConverter-benchmark
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry
version = 0.0.1

[options]
packages = find:
python_requires = ==3.10.2
install_requires =
    cython==0.29.28
    rdkit-pypi==2021.9.5.1
    tqdm==4.63.0
    chembl_webresource_client==0.10.7
    mols2grid==0.2.1
    mdanalysis @ git+https://github.com/cbouy/mdanalysis.git@fix-converter#subdirectory=package
